# gen/http/books/server/types.go
@@ -9,19 +9,19 @@ package server
 
 import (
 	books "books/gen/books"
+
+	goa "goa.design/goa/v3/pkg"
 )
 
 // CreateRequestBody is the type of the "books" service "create" endpoint HTTP
 // request body.
 type CreateRequestBody struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
 	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
 	// Author of the book
 	Author *string `form:"author,omitempty" json:"author,omitempty" xml:"author,omitempty"`
-	// Cover of the book
-	BookCover *string `form:"bookCover,omitempty" json:"bookCover,omitempty" xml:"bookCover,omitempty"`
 	// Date the book has been published
 	PublishedAt *string `form:"publishedAt,omitempty" json:"publishedAt,omitempty" xml:"publishedAt,omitempty"`
 }
@@ -35,16 +35,16 @@ type UpdateBookRequestBody struct {
 // CreateResponseBody is the type of the "books" service "create" endpoint HTTP
 // response body.
 type CreateResponseBody struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
-	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
+	Title string `form:"title" json:"title" xml:"title"`
 	// Author of the book
-	Author *string `form:"author,omitempty" json:"author,omitempty" xml:"author,omitempty"`
+	Author string `form:"author" json:"author" xml:"author"`
 	// Cover of the book
-	BookCover *string `form:"bookCover,omitempty" json:"bookCover,omitempty" xml:"bookCover,omitempty"`
+	BookCover string `form:"bookCover" json:"bookCover" xml:"bookCover"`
 	// Date the book has been published
-	PublishedAt *string `form:"publishedAt,omitempty" json:"publishedAt,omitempty" xml:"publishedAt,omitempty"`
+	PublishedAt string `form:"publishedAt" json:"publishedAt" xml:"publishedAt"`
 }
 
 // AllResponseBody is the type of the "books" service "all" endpoint HTTP
@@ -54,51 +54,51 @@ type AllResponseBody []*BookResponse
 // UpdateBookResponseBody is the type of the "books" service "updateBook"
 // endpoint HTTP response body.
 type UpdateBookResponseBody struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
-	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
+	Title string `form:"title" json:"title" xml:"title"`
 	// Author of the book
-	Author *string `form:"author,omitempty" json:"author,omitempty" xml:"author,omitempty"`
+	Author string `form:"author" json:"author" xml:"author"`
 	// Cover of the book
-	BookCover *string `form:"bookCover,omitempty" json:"bookCover,omitempty" xml:"bookCover,omitempty"`
+	BookCover string `form:"bookCover" json:"bookCover" xml:"bookCover"`
 	// Date the book has been published
-	PublishedAt *string `form:"publishedAt,omitempty" json:"publishedAt,omitempty" xml:"publishedAt,omitempty"`
+	PublishedAt string `form:"publishedAt" json:"publishedAt" xml:"publishedAt"`
 }
 
 // GetBookResponseBody is the type of the "books" service "getBook" endpoint
 // HTTP response body.
 type GetBookResponseBody struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
-	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
+	Title string `form:"title" json:"title" xml:"title"`
 	// Author of the book
-	Author *string `form:"author,omitempty" json:"author,omitempty" xml:"author,omitempty"`
+	Author string `form:"author" json:"author" xml:"author"`
 	// Cover of the book
-	BookCover *string `form:"bookCover,omitempty" json:"bookCover,omitempty" xml:"bookCover,omitempty"`
+	BookCover string `form:"bookCover" json:"bookCover" xml:"bookCover"`
 	// Date the book has been published
-	PublishedAt *string `form:"publishedAt,omitempty" json:"publishedAt,omitempty" xml:"publishedAt,omitempty"`
+	PublishedAt string `form:"publishedAt" json:"publishedAt" xml:"publishedAt"`
 }
 
 // BookResponse is used to define fields on response body types.
 type BookResponse struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
-	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
+	Title string `form:"title" json:"title" xml:"title"`
 	// Author of the book
-	Author *string `form:"author,omitempty" json:"author,omitempty" xml:"author,omitempty"`
+	Author string `form:"author" json:"author" xml:"author"`
 	// Cover of the book
-	BookCover *string `form:"bookCover,omitempty" json:"bookCover,omitempty" xml:"bookCover,omitempty"`
+	BookCover string `form:"bookCover" json:"bookCover" xml:"bookCover"`
 	// Date the book has been published
-	PublishedAt *string `form:"publishedAt,omitempty" json:"publishedAt,omitempty" xml:"publishedAt,omitempty"`
+	PublishedAt string `form:"publishedAt" json:"publishedAt" xml:"publishedAt"`
 }
 
 // BookRequestBody is used to define fields on request body types.
 type BookRequestBody struct {
-	// Unique ID of the book
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// id
+	ID *int `form:"ID,omitempty" json:"ID,omitempty" xml:"ID,omitempty"`
 	// Title of the book
 	Title *string `form:"title,omitempty" json:"title,omitempty" xml:"title,omitempty"`
 	// Author of the book
@@ -159,14 +159,14 @@ func NewGetBookResponseBody(res *books.Book) *GetBookResponseBody {
 }
 
 // NewCreateBook builds a books service create endpoint payload.
-func NewCreateBook(body *CreateRequestBody) *books.Book {
+func NewCreateBook(body *CreateRequestBody, bookCover string) *books.Book {
 	v := &books.Book{
 		ID:          body.ID,
-		Title:       body.Title,
-		Author:      body.Author,
-		BookCover:   body.BookCover,
-		PublishedAt: body.PublishedAt,
+		Title:       *body.Title,
+		Author:      *body.Author,
+		PublishedAt: *body.PublishedAt,
 	}
+	v.BookCover = bookCover
 
 	return v
 }
@@ -196,4 +196,49 @@ func NewDeleteBookPayload(id int) *books.DeleteBookPayload {
 	v.ID = &id
 
 	return v
+}
+
+// ValidateCreateRequestBody runs the validations defined on CreateRequestBody
+func ValidateCreateRequestBody(body *CreateRequestBody) (err error) {
+	if body.Title == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("title", "body"))
+	}
+	if body.Author == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("author", "body"))
+	}
+	if body.PublishedAt == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("publishedAt", "body"))
+	}
+	return
+}
+
+// ValidateUpdateBookRequestBody runs the validations defined on
+// UpdateBookRequestBody
+func ValidateUpdateBookRequestBody(body *UpdateBookRequestBody) (err error) {
+	if body.Book != nil {
+		if err2 := ValidateBookRequestBody(body.Book); err2 != nil {
+			err = goa.MergeErrors(err, err2)
+		}
+	}
+	return
+}
+
+// ValidateBookRequestBody runs the validations defined on BookRequestBody
+func ValidateBookRequestBody(body *BookRequestBody) (err error) {
+	if body.Title == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("title", "body"))
+	}
+	if body.Author == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("author", "body"))
+	}
+	if body.BookCover == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("bookCover", "body"))
+	}
+	if body.PublishedAt == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("publishedAt", "body"))
+	}
+	if body.BookCover != nil {
+		err = goa.MergeErrors(err, goa.ValidatePattern("body.bookCover", *body.BookCover, "multipart/[^;]+; boundary=.+"))
+	}
+	return
 }
